[gd_scene load_steps=14 format=2]

[ext_resource path="res://common/Card/3DCard.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/Environment/space_environment_meshlib.tres" type="MeshLibrary" id=3]
[ext_resource path="res://Screens/Tween/CardDraw3D/HandTween3D.gd" type="Script" id=4]
[ext_resource path="res://Screens/Tween/CardDraw3D/DeckCardDraw3D.gd" type="Script" id=5]
[ext_resource path="res://Screens/Tween/CardDraw3D/card_back.svg" type="Texture" id=6]
[ext_resource path="res://common/blackhole.png" type="Texture" id=7]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 3.86787, 0, 0, Vector2( 0.497283, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.48109, 0.0, 0, 0 ]

[sub_resource type="Curve" id=4]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1.3, 1, 1.8 )

[sub_resource type="QuadMesh" id=6]
size = Vector2( 2.5, 3.5 )

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 6 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 2.5, 0.688, 3.5 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.152941, 0.152941, 0.211765, 1 )

[node name="CardDraw3D" type="Spatial"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0.707107, -0.5, -0.5, 0, 10, 0 )
shadow_enabled = true
shadow_bias = 0.05
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.2
directional_shadow_max_distance = 50.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 12, 0 )
current = true
fov = 80.0

[node name="GridMap" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )
mesh_library = ExtResource( 3 )
cell_center_y = false
data = {
"cells": PoolIntArray( -65536, 0, 19, -65535, 0, 12, -65534, 0, 655372, -65533, 0, 655372, -65532, 0, 655372, -65531, 0, 12, -65530, 0, 12, -65529, 0, 1441804, -65528, 0, 12, -65527, 0, 12, -9, 0, 1048585, -8, 0, 1048585, -7, 0, 1048585, -6, 0, 9, -5, 0, 9, -4, 0, 655369, -3, 0, 655369, -2, 0, 655369, -1, 0, 655369, -65536, 1, 19, -65535, 1, 12, -65534, 1, 655372, -65533, 1, 655372, -65532, 1, 655372, -65531, 1, 12, -65530, 1, 12, -65529, 1, 1441804, -65528, 1, 12, -65527, 1, 12, -9, 1, 1048585, -8, 1, 1048585, -7, 1, 1048585, -6, 1, 9, -5, 1, 9, -4, 1, 655369, -3, 1, 655369, -2, 1, 655369, -1, 1, 655369, -65536, 2, 19, -65535, 2, 12, -65534, 2, 655372, -65533, 2, 655372, -65532, 2, 655372, -65531, 2, 12, -65530, 2, 12, -65529, 2, 12, -65528, 2, 12, -65527, 2, 12, -9, 2, 1441801, -8, 2, 1441801, -7, 2, 1441801, -6, 2, 9, -5, 2, 9, -4, 2, 655369, -3, 2, 655369, -2, 2, 655369, -1, 2, 655369, -65536, 3, 19, -65535, 3, 12, -65534, 3, 655372, -65533, 3, 655372, -65532, 3, 655372, -65531, 3, 12, -65530, 3, 12, -65529, 3, 1441804, -65528, 3, 1441804, -65527, 3, 655366, -9, 3, 655375, -8, 3, 1441801, -7, 3, 9, -6, 3, 9, -5, 3, 9, -4, 3, 655369, -3, 3, 655369, -2, 3, 655369, -1, 3, 655369, -65536, 4, 19, -65535, 4, 12, -65534, 4, 655372, -65533, 4, 655372, -65532, 4, 655372, -65531, 4, 12, -65530, 4, 12, -65529, 4, 1441804, -65528, 4, 1441798, -65527, 4, 1048582, -9, 4, 15, -8, 4, 1441807, -7, 4, 1048585, -6, 4, 9, -5, 4, 9, -4, 4, 655369, -3, 4, 655369, -2, 4, 655369, -1, 4, 655369, -65536, 65531, 19, -65535, 65531, 12, -65534, 65531, 12, -65533, 65531, 12, -65532, 65531, 12, -65531, 65531, 12, -65530, 65531, 12, -65529, 65531, 1441804, -65528, 65531, 1048582, -65527, 65531, 655366, -9, 65531, 655375, -8, 65531, 1441807, -7, 65531, 9, -6, 65531, 9, -5, 65531, 9, -4, 65531, 9, -3, 65531, 9, -2, 65531, 9, -1, 65531, 9, -65536, 65532, 19, -65535, 65532, 12, -65534, 65532, 12, -65533, 65532, 12, -65532, 65532, 12, -65531, 65532, 12, -65530, 65532, 12, -65529, 65532, 1441804, -65528, 65532, 12, -65527, 65532, 1048582, -9, 65532, 15, -8, 65532, 1048585, -7, 65532, 1048585, -6, 65532, 9, -5, 65532, 9, -4, 65532, 9, -3, 65532, 9, -2, 65532, 9, -1, 65532, 9, -65536, 65533, 19, -65535, 65533, 12, -65534, 65533, 12, -65533, 65533, 12, -65532, 65533, 12, -65531, 65533, 12, -65530, 65533, 12, -65529, 65533, 1441804, -65528, 65533, 12, -65527, 65533, 12, -9, 65533, 1048585, -8, 65533, 1048585, -7, 65533, 1048585, -6, 65533, 9, -5, 65533, 9, -4, 65533, 9, -3, 65533, 9, -2, 65533, 9, -1, 65533, 9, -65536, 65534, 19, -65535, 65534, 12, -65534, 65534, 12, -65533, 65534, 12, -65532, 65534, 12, -65531, 65534, 12, -65530, 65534, 12, -65529, 65534, 1441804, -65528, 65534, 12, -65527, 65534, 12, -9, 65534, 1048585, -8, 65534, 1048585, -7, 65534, 1048585, -6, 65534, 9, -5, 65534, 9, -4, 65534, 9, -3, 65534, 9, -2, 65534, 9, -1, 65534, 9, -65536, 65535, 19, -65535, 65535, 12, -65534, 65535, 12, -65533, 65535, 12, -65532, 65535, 12, -65531, 65535, 12, -65530, 65535, 12, -65529, 65535, 12, -65528, 65535, 12, -65527, 65535, 12, -9, 65535, 1441801, -8, 65535, 1441801, -7, 65535, 1441801, -6, 65535, 9, -5, 65535, 9, -4, 65535, 9, -3, 65535, 9, -2, 65535, 9, -1, 65535, 9 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="Player" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -1, 8 )

[node name="HandTween" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 4 )
height_curve = SubResource( 3 )
rotation_curve = SubResource( 4 )

[node name="Cards" type="Spatial" parent="Player/HandTween"]

[node name="Card" parent="Player/HandTween/Cards" instance=ExtResource( 2 )]
transform = Transform( -8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, 0, 0, 0 )
card_art = ExtResource( 7 )
card_name = "Black Hole"

[node name="Card2" parent="Player/HandTween/Cards" instance=ExtResource( 2 )]
transform = Transform( -8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, 0, 0, 0 )
card_art = ExtResource( 7 )
card_name = "Black Hole"

[node name="Tween" type="Tween" parent="Player/HandTween"]

[node name="Deck" type="Area" parent="Player"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.14754, 0.87647, 10.4245 )
script = ExtResource( 5 )
card_scene = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Player/Deck"]
shape = SubResource( 5 )

[node name="Model" type="Spatial" parent="Player/Deck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0156682, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Player/Deck/Model"]
transform = Transform( 0.994373, 0.105934, 4.63054e-09, 0, -4.37114e-08, 1, 0.105934, -0.994373, -4.34654e-08, 0, 0.222941, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="MeshInstance2" type="MeshInstance" parent="Player/Deck/Model"]
transform = Transform( 0.998953, -0.0457466, -1.99965e-09, 0, -4.37114e-08, 1, -0.0457466, -0.998953, -4.36656e-08, 0, 0.578114, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="MeshInstance3" type="MeshInstance" parent="Player/Deck/Model"]
transform = Transform( 0.999308, -0.0372018, -1.62614e-09, 0, -4.37114e-08, 1, -0.0372018, -0.999308, -4.36811e-08, 0, 0.796946, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="MeshInstance4" type="MeshInstance" parent="Player/Deck/Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.448411, 0 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[connection signal="input_event" from="Player/HandTween/Cards/Card" to="Player/HandTween" method="_on_Card_input_event"]
[connection signal="input_event" from="Player/HandTween/Cards/Card2" to="Player/HandTween" method="_on_Card_input_event"]
[connection signal="card_drawn" from="Player/Deck" to="Player/HandTween" method="add_card"]
